# kaggle-ts-forecast-v2

./: .gitignore  Makefile  README.md  pyproject.toml
lib/: metrics.py  viz.py
monitoring/data_quality/: expectations.py
monitoring/model_drift/: drift_report.py
notebooks/: eda.ipynb
orchestration/airflow_dags/: ts_forecast_dag.py
orchestration/prefect_flows/: ts_forecast_flow.py
pipelines/ts_forecast/: pipeline.py
pipelines/ts_forecast/config/: base.yaml
pipelines/ts_forecast/nodes/: evaluation.py  feature_engineering.py  preprocessing.py  training.py
pipelines/ts_forecast/tests/: test_pipeline.py
serving/: api.py
tests/: conftest.py
