[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-ts-forecast-v2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "optuna>=3.0",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "tsfresh>=0.20",
    "mlflow>=2.8",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "seaborn>=0.12",
    "kagglehub>=0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "jupyterlab>=3.0",
    "ipykernel>=6.25",
]

[tool.setuptools.packages.find]
where = ["pipelines", "lib"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests", "pipelines"]
